[project]
name = "webScraperAgent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "ipykernel>=6.29.5",
    "ipynb>=0.5.1",
    "jupyter>=1.1.1",
    "jupyter-kernel-gateway>=3.0.1",
    "python-dotenv>=1.0.1",
    "autogen-ext[mcp,openai,web-surfer]>=0.4.9.2",
    "praw>=7.8.1",
    "redvid>=2.0.5",
    "google-api-python-client>=2.166.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
]
